--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/thumbnail.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/thumbnail.html.twig
@@ -1,1 +1,2 @@
+<a href="{{ path('yannick_mahe_self_hosted_videos_video', {'video_id': video.id}) }}"><img src="{{ app.request.scheme ~ '://' ~ app.request.host ~ '/' ~ video.thumbnailWebPath }}" alt={{ video.name }}/></a>
 <a href="{{ path('yannick_mahe_self_hosted_videos_video', {'video_id': video.id}) }}">{{ video.name }}</a>
