--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
@@ -3,7 +3,7 @@
 <li>{% if current == 'list' %}List{% else %}<a href="{{ path('yannick_mahe_self_hosted_videos_list') }}">List</a>{% endif %}</li>
 </ul>
 
-<form method="GET" action="{{ path('yannick_mahe_self_hosted_videos_list') }}">
+<form method="GET" action="{{ path('yannick_mahe_self_hosted_videos_list') }}" class="form-search">
 	<input type="text" name="q" value="{{ q }}" />
-	<input type="submit" value="Go" />
+	<input type="submit" value="Go" class="btn btn-primary"/>
 </form>
