--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/index.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/index.html.twig
@@ -11,9 +11,10 @@
 {% endblock %}
 
 {% block content %}
-<h1>Home</h1>
+<div class="page-header">
+<h1>Welcome</h1>
+</div>
 
-<h2>Upload File</h2>
 
 <div id="jquery-wrapped-fine-uploader">
         	
