--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
@@ -1,9 +1,16 @@
-<ul>
-<li>{% if current == 'home' %}Home{% else %}<a href="{{ path('yannick_mahe_self_hosted_videos_homepage') }}">Home</a>{% endif %}</li>
-<li>{% if current == 'list' %}List{% else %}<a href="{{ path('yannick_mahe_self_hosted_videos_list') }}">List</a>{% endif %}</li>
-</ul>
 
-<form method="GET" action="{{ path('yannick_mahe_self_hosted_videos_list') }}" class="form-search">
-	<input type="text" name="q" value="{{ q }}" />
-	<input type="submit" value="Go" class="btn btn-primary"/>
-</form>
+<div class="masthead">
+	<ul class="nav nav-pills pull-right">
+	<li{% if current == 'home' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_homepage') }}">Home</a></li>
+	<li{% if current == 'list' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_list') }}">List</a></li>
+	<li>
+		<form method="GET" action="{{ path('yannick_mahe_self_hosted_videos_list') }}" class="form-search pull-right">
+			<input type="text" name="q" value="{{ q }}" placeholder="Search video..." />
+			<input type="submit" value="Go" class="btn btn-primary"/>
+		</form>
+	</li>
+	</ul>
+	<h3 class="muted">
+		<a href="{{ path('yannick_mahe_self_hosted_videos_homepage') }}">Self Hosted Videos</a>
+	</h3>
+</div>
