--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/thumbnail.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/thumbnail.html.twig
@@ -1,2 +1,12 @@
-<a href="{{ path('yannick_mahe_self_hosted_videos_video', {'video_id': video.id}) }}"><img src="{{ app.request.scheme ~ '://' ~ app.request.host ~ '/' ~ video.thumbnailWebPath }}" alt={{ video.name }}/></a>
-<a href="{{ path('yannick_mahe_self_hosted_videos_video', {'video_id': video.id}) }}">{{ video.name }}</a>
+<div class="thumbnail">
+	<a href="{{ path('yannick_mahe_self_hosted_videos_video', {'video_id': video.id}) }}">
+		<img src="{{ app.request.scheme ~ '://' ~ app.request.host ~ '/' ~ video.thumbnailWebPath }}" alt={{ video.name }}/>
+	</a>
+	<div class="caption">
+		<h3>{{ video.name|truncate(20, true, '...') }}</h3>
+		<p>
+			<a href="{{ path('yannick_mahe_self_hosted_videos_video', {'video_id': video.id}) }}"><i class="icon-play-circle"></i> {{ video.name }}</a>
+		</p>
+	</div>
+	
+</div>
