--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
@@ -9,7 +9,9 @@
 {% endblock %}
 
 {% block content %}
+<div class="page-header">
 <h1>{{ video.name }}</h1>
+</div>
 
 <div class="flowplayer" style="width: {{ video.width }}px; height: {{ video.height }}px">
    <video>
