--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
@@ -1,16 +1,16 @@
 
 <div class="masthead">
 	<ul class="nav nav-pills pull-right">
-	<li{% if current == 'home' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_homepage') }}">Home</a></li>
-	<li{% if current == 'list' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_list') }}">List</a></li>
+	<li{% if current == 'list' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_list') }}">All videos</a></li>
+	<li{% if current == 'upload' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_upload_page') }}">Upload</a></li>
 	<li>
-		<form method="GET" action="{{ path('yannick_mahe_self_hosted_videos_list') }}" class="form-search pull-right">
+		<form style="margin-left: 10px; margin-top: 2px;" method="GET" action="{{ path('yannick_mahe_self_hosted_videos_list') }}" class="form-search pull-right">
 			<input type="text" name="q" value="{{ q }}" placeholder="Search video..." />
 			<input type="submit" value="Go" class="btn btn-primary"/>
 		</form>
 	</li>
 	</ul>
 	<h3 class="muted">
-		<a href="{{ path('yannick_mahe_self_hosted_videos_homepage') }}">Self Hosted Videos</a>
+		<a href="{{ path('yannick_mahe_self_hosted_videos_list') }}">Self Hosted Videos</a>
 	</h3>
 </div>
