--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/upload.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/upload.html.twig
@@ -3,7 +3,7 @@
 {% block title 'Home' %}
 
 {% block menu %}
-   {% include "YannickMaheSelfHostedVideosBundle:Default:menu.html.twig" with {'current': 'home', 'q': ''} %}
+   {% include "YannickMaheSelfHostedVideosBundle:Default:menu.html.twig" with {'current': 'upload', 'q': ''} %}
 {% endblock %}
 
 {% block page_stylesheets %}
@@ -12,7 +12,7 @@
 
 {% block content %}
 <div class="page-header">
-<h1>Welcome</h1>
+<h1>Upload videos</h1>
 </div>
 
 
