--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/layout.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/layout.html.twig
@@ -20,7 +20,7 @@
 {% block title 'Self Hosted Videos' %}
 
 {% block body %}
-	<div class="container">
+	<div class="container" id="main-container">
     {% block menu %}
        {% include "YannickMaheSelfHostedVideosBundle:Default:menu.html.twig" with {'current': ''} %}
     {% endblock %}
