--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
@@ -1,8 +1,8 @@
 
 <div class="masthead">
 	<ul class="nav nav-pills pull-right">
-	<li{% if current == 'list' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_list') }}">All videos</a></li>
-	<li{% if current == 'upload' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_upload_page') }}">Upload</a></li>
+	<li{% if current == 'list' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_list') }}"><i class="icon-play-circle"></i> All videos</a></li>
+	<li{% if current == 'upload' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_upload_page') }}"><i class="icon-upload"></i> Upload</a></li>
 	<li>
 		<form style="margin-left: 10px; margin-top: 2px;" method="GET" action="{{ path('yannick_mahe_self_hosted_videos_list') }}" class="form-search pull-right">
 			<input type="text" name="q" value="{{ q }}" placeholder="Search video..." />
