--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/upload.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/upload.html.twig
@@ -50,7 +50,7 @@
           },
           template: '<div class="qq-uploader span8">' +
                       '<pre class="qq-upload-drop-area span8"><span>{dragZoneText}</span></pre>' +
-                      '<div class="qq-upload-button btn btn-success btn-large" style="width: auto;">Upload new videos</div>' +
+                      '<div class="qq-upload-button btn btn-success btn-large" style="width: auto;"><i class="icon-upload icon-white"></i> Upload new videos</div>' +
                       '<span class="qq-drop-processing"><span>{dropProcessingText}</span><span class="qq-drop-processing-spinner"></span></span>' +
                       '<ul class="qq-upload-list" style="margin-top: 10px; text-align: center;"></ul>' +
                     '</div>'
