--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
@@ -1,15 +1,18 @@
 
 <div class="masthead">
-	<ul class="nav nav-pills pull-right">
-	<li{% if current == 'list' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_list') }}"><i class="icon-play-circle"></i> All videos</a></li>
-	<li{% if current == 'upload' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_upload_page') }}"><i class="icon-upload"></i> Upload</a></li>
-	<li>
-		<form style="margin-left: 10px; margin-top: 2px;" method="GET" action="{{ path('yannick_mahe_self_hosted_videos_list') }}" class="form-search pull-right">
-			<input type="text" name="q" value="{{ q }}" placeholder="Search video..." />
-			<input type="submit" value="Go" class="btn btn-primary"/>
-		</form>
-	</li>
-	</ul>
+	{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+		<ul class="nav nav-pills pull-right">
+		<li{% if current == 'list' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_list') }}"><i class="icon-play-circle"></i> All videos</a></li>
+		<li{% if current == 'upload' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_upload_page') }}"><i class="icon-upload"></i> Upload</a></li>
+		<li><a href="{{ path('fos_user_security_logout') }}"><i class="icon-lock"></i> Logout</a></li>
+		<li>
+			<form style="margin-left: 10px; margin-top: 2px;" method="GET" action="{{ path('yannick_mahe_self_hosted_videos_list') }}" class="form-search pull-right">
+				<input type="text" name="q" value="{{ q }}" placeholder="Search video..." />
+				<input type="submit" value="Go" class="btn btn-primary"/>
+			</form>
+		</li>
+		</ul>
+	{% endif %}
 	<h3 class="muted">
 		<a href="{{ path('yannick_mahe_self_hosted_videos_list') }}">Self Hosted Videos</a>
 	</h3>
