--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/upload.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/upload.html.twig
@@ -1,6 +1,6 @@
 {% extends "YannickMaheSelfHostedVideosBundle::layout.html.twig" %}
 
-{% block title 'Home' %}
+{% block title 'Upload' %}
 
 {% block menu %}
    {% include "YannickMaheSelfHostedVideosBundle:Default:menu.html.twig" with {'current': 'upload', 'q': ''} %}
