--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/layout.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/layout.html.twig
@@ -12,6 +12,9 @@
 	  .thumbnails .caption{
 	  	text-align: left;
 	  }
+	  p.filename{
+	  	height: 42px;
+	  }
 	</style>
 	{% include 'BraincraftedBootstrapBundle::_stylesheets.html.twig' %}
 	{% block page_stylesheets %}{% endblock %}
