--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/thumbnail.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/thumbnail.html.twig
@@ -4,7 +4,7 @@
 	</a>
 	<div class="caption">
 		<h3>{{ video.name|truncate(20, true, '...') }}</h3>
-		<p>
+		<p class="filename">
 			<a href="{{ path('yannick_mahe_self_hosted_videos_video', {'video_id': video.id}) }}"><i class="icon-play-circle"></i> {{ video.name }}</a>
 		</p>
 	</div>
