toggle background on videos

--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/layout.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/layout.html.twig
@@ -15,6 +15,9 @@
 	  p.filename{
 	  	height: 42px;
 	  }
+	  body.dark{
+	  	background-color: black;
+	  }
 	</style>
 	{% include 'BraincraftedBootstrapBundle::_stylesheets.html.twig' %}
 	{% block page_stylesheets %}{% endblock %}
