--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
@@ -21,9 +21,16 @@
 	</div>
 </div>
 <hr />
-<a class="btn btn-primary" href="{{ app.request.scheme ~ '://' ~ app.request.host ~ '/' ~ video.webPath }}">
-	<i class="icon-download icon-white"></i> Download {{ video.name }}
-</a>
+<div class="btn-toolbar">
+	<div class="btn-group">
+		<a class="btn" onclick="$('body').toggleClass('dark');">Toggle background</a>
+	</div>
+	<div class="btn-group">
+		<a class="btn btn-primary" href="{{ app.request.scheme ~ '://' ~ app.request.host ~ '/' ~ video.webPath }}">
+			<i class="icon-download icon-white"></i> Download {{ video.name }}
+		</a>
+	</div>
+</div>
 {% endblock %}
 
 {% block page_javascripts %}
