change movie mode button name

--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
@@ -23,7 +23,7 @@
 <hr />
 <div class="btn-toolbar">
 	<div class="btn-group">
-		<a class="btn" onclick="$('body').toggleClass('dark');">Toggle background</a>
+		<a class="btn" onclick="$('body').toggleClass('dark');">Toggle cinema mode</a>
 	</div>
 	<div class="btn-group">
 		<a class="btn btn-primary" href="{{ app.request.scheme ~ '://' ~ app.request.host ~ '/' ~ video.webPath }}">
