--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
@@ -30,7 +30,27 @@
 			<i class="icon-download icon-white"></i> Download {{ video.name }}
 		</a>
 	</div>
+	<div class="btn-group">
+		<a class="btn btn-danger" data-toggle="modal" href="#modal-delete">
+			<i class="icon-remove-sign icon-white"></i> Delete this video
+		</a>
+	</div>
 </div>
+
+<div class="modal hide fade" id="modal-delete">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>Are you sure?</h3>
+  </div>
+  <div class="modal-body" style="text-align: center;">
+    <img style="margin-left: auto; margin-right: auto;" src="{{ app.request.scheme ~ '://' ~ app.request.host ~ '/' ~ video.thumbnailWebPath }}" alt={{ video.name }}/>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn">Cancel</a>
+    <a href="#" class="btn btn-danger"><i class="icon-remove-sign icon-white"></i> Yes, delete this video</a>
+  </div>
+</div>
+
 {% endblock %}
 
 {% block page_javascripts %}
