redesign with flat ui

--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/upload.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/upload.html.twig
@@ -48,9 +48,9 @@
             success: 'alert alert-success',
             fail: 'alert alert-error'
           },
-          template: '<div class="qq-uploader span8">' +
+          template: '<div class="qq-uploader span7" style="width: 95%">' +
                       '<pre class="qq-upload-drop-area span8"><span>{dragZoneText}</span></pre>' +
-                      '<div class="qq-upload-button btn btn-success btn-large" style="width: auto;"><i class="icon-upload icon-white"></i> Upload new videos</div>' +
+                      '<div class="qq-upload-button btn btn-success btn-large" style="width: auto;"><span class="fui-plus-24"></span>  Upload new videos</div>' +
                       '<span class="qq-drop-processing"><span>{dropProcessingText}</span><span class="qq-drop-processing-spinner"></span></span>' +
                       '<ul class="qq-upload-list" style="margin-top: 10px; text-align: center;"></ul>' +
                     '</div>'
