--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/layout.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/layout.html.twig
@@ -20,6 +20,7 @@
 	  }
 	</style>
 	{% include 'BraincraftedBootstrapBundle::_stylesheets.html.twig' %}
+	<link rel="stylesheet" type="text/css" href="{{ asset('bundles/yannickmaheselfhostedvideos/css/flat-ui.css') }}">
 	{% block page_stylesheets %}{% endblock %}
 {% endblock %}
 
@@ -37,5 +38,14 @@
 {% block javascripts %}
 	{% include 'BraincraftedBootstrapBundle::_html5shiv.html.twig' %}
 	{% include 'BraincraftedBootstrapBundle::_javascripts.html.twig' %}
+	<script type="text/javascript" src="{{ asset('bundles/yannickmaheselfhostedvideos/js/application.js') }}"></script>
+	<script type="text/javascript" src="{{ asset('bundles/yannickmaheselfhostedvideos/js/bootstrap-tooltip.js') }}"></script>
+	<script type="text/javascript" src="{{ asset('bundles/yannickmaheselfhostedvideos/js/custom_checkbox_and_radio.js') }}"></script>
+	<script type="text/javascript" src="{{ asset('bundles/yannickmaheselfhostedvideos/js/custom_radio.js') }}"></script>
+	<script type="text/javascript" src="{{ asset('bundles/yannickmaheselfhostedvideos/js/jquery.icon-font-ie6.js') }}"></script>
+	<script type="text/javascript" src="{{ asset('bundles/yannickmaheselfhostedvideos/js/jquery-ui-1.10.0.custom.min.js') }}"></script>
+	<script type="text/javascript" src="{{ asset('bundles/yannickmaheselfhostedvideos/js/jquery.dropkick-1.0.0.js') }}"></script>
+	<script type="text/javascript" src="{{ asset('bundles/yannickmaheselfhostedvideos/js/jquery.tagsinput.js') }}"></script>
+	<script type="text/javascript" src="{{ asset('bundles/yannickmaheselfhostedvideos/js/jquery.placeholder.js') }}"></script>
 	{% block page_javascripts %}{% endblock %}
 {% endblock %}
