--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
@@ -21,21 +21,14 @@
 	</div>
 </div>
 <hr />
-<div class="btn-toolbar">
-	<div class="btn-group">
-		<a class="btn" onclick="$('body').toggleClass('dark');">Toggle cinema mode</a>
-	</div>
-	<div class="btn-group">
-		<a class="btn btn-primary" href="{{ app.request.scheme ~ '://' ~ app.request.host ~ '/' ~ video.webPath }}">
-			<i class="icon-download icon-white"></i> Download {{ video.name }}
-		</a>
-	</div>
-	<div class="btn-group">
-		<a class="btn btn-danger" data-toggle="modal" href="#modal-delete">
-			<i class="icon-remove-sign icon-white"></i> Delete this video
-		</a>
-	</div>
-</div>
+<a class="btn" onclick="$('body').toggleClass('dark');">Toggle cinema mode</a>
+
+<a class="btn btn-primary" href="{{ app.request.scheme ~ '://' ~ app.request.host ~ '/' ~ video.webPath }}">
+	Download {{ video.name }}
+</a>
+<a class="btn btn-danger" data-toggle="modal" href="#modal-delete">
+	<span class="fui-cross-16"></span> Delete this video
+</a>
 
 <div class="modal hide fade" id="modal-delete">
   <div class="modal-header">
@@ -50,7 +43,7 @@
   </div>
   <div class="modal-footer">
     <a href="#" class="btn">Cancel</a>
-    <a href="#" onclick="$('#modal-delete form').submit();" class="btn btn-danger"><i class="icon-remove-sign icon-white"></i> Yes, delete this video</a>
+    <a href="#" onclick="$('#modal-delete form').submit();" class="btn btn-danger"><span class="fui-cross-24"></span> Yes, delete this video</a>
   </div>
 </div>
 
