--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -7,19 +7,22 @@
     	{{ error|trans({}, 'FOSUserBundle') }}
     </div>
 {% endif %}
-
+<div class="login-form">
 <form action="{{ path("fos_user_security_check") }}" method="post">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-    <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+    <div class="control-group">
+        <input class="login-field" type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+        <label class="login-field-icon fui-man-16" for="username"></label>
+    </div>
 
-    <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-    <input type="password" id="password" name="_password" required="required" />
-
+    <div class="control-group">
+        <input type="password" class="login-field" id="password" name="_password" required="required" />
+        <label class="login-field-icon fui-lock-16" for="password"></label>
+    </div>
     
-    <label for="remember_me"><input type="checkbox" id="remember_me" name="_remember_me" value="on" /> {{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
 
-    <input type="submit" class="btn" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
+    <input type="submit" class="btn btn-primary btn-large btn-block" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
 </form>
+</div>
 {% endblock content %}
