--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/public/css/flat-ui.css
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/public/css/flat-ui.css
@@ -2363,12 +2363,12 @@ body.vjs-full-window {
       font-weight: 700; }
 
 .login-form {
+  width: 316px;
   background-color: #eceff1;
   border-radius: 6px;
   padding: 24px 23px 20px;
   position: relative; }
   .login-form:before {
-    content: "";
     border-style: solid;
     border-width: 12px 12px 12px 0;
     border-color: transparent #eceff1 transparent transparent;
