--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
@@ -24,7 +24,7 @@
 <a class="btn" onclick="$('body').toggleClass('dark');">Toggle cinema mode</a>
 
 <a class="btn btn-primary" href="{{ app.request.scheme ~ '://' ~ app.request.host ~ '/' ~ video.webPath }}">
-	Download {{ video.name }}
+	Direct link
 </a>
 <a class="btn btn-danger" data-toggle="modal" href="#modal-delete">
 	<span class="fui-cross-16"></span> Delete this video
