--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/list.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/list.html.twig
@@ -30,6 +30,10 @@
 		{% endfor %}
 	</ul>
 {% else %}
-	<h2>No video has yet been uploaded! Go ahead and <a href="{{ path('yannick_mahe_self_hosted_videos_upload_page') }}">upload one</a>.</h2>
+	{% if terms == '' %}
+		<h2>No video has yet been uploaded! Go ahead and <a href="{{ path('yannick_mahe_self_hosted_videos_upload_page') }}">upload one</a>.</h2>
+	{% else %}
+		<h2>No video found.</h2>
+	{% endif %}
 {% endif %}
 {% endblock %}
