--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
@@ -5,6 +5,7 @@
 	{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
 		<ul class="nav pull-right">
 		<li{% if current == 'list' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_list') }}"><span class="fui-video-24"></span> All videos</a></li>
+		<li{% if current == 'from_file' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_add_from_file') }}"><span class="fui-plus-24"></span> Add from file</a></li>
 		<li{% if current == 'upload' %} class="active"{% endif %}><a href="{{ path('yannick_mahe_self_hosted_videos_upload_page') }}"><span class="fui-plus-24"></span> Upload</a></li>
 		<li><a href="{{ path('fos_user_security_logout') }}"><span class="fui-lock-24"></span> Logout</a></li>
 		<li>                
