--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/upload.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/upload.html.twig
@@ -24,7 +24,7 @@
 
 {% block page_javascripts %}
 	<script src="{{ asset('bundles/yannickmaheselfhostedvideos/js/jquery.fineuploader-3.3.0.min.js') }}"></script>
-	<script>
+	<script type="text/javascript">
       $(document).ready(function () {
         $('#jquery-wrapped-fine-uploader').fineUploader({
           request: {
