--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
@@ -21,6 +21,15 @@
 	</div>
 </div>
 <hr />
+
+{% if previous %}
+<a class="btn" title="{{ previous.name }}" href="{{ path('yannick_mahe_self_hosted_videos_video', {'video_id': previous.id}) }}"><<</a>
+{% endif %}
+
+{% if next %}
+<a class="btn" title="{{ next.name }}" href="{{ path('yannick_mahe_self_hosted_videos_video', {'video_id': next.id}) }}">>></a>
+{% endif %}
+
 <a class="btn" onclick="$('body').toggleClass('dark');">Toggle cinema mode</a>
 
 <a class="btn btn-primary" href="{{ app.request.scheme ~ '://' ~ app.request.host ~ '/' ~ video.webPath }}">
@@ -53,7 +62,7 @@
 	<script>
 		$(document).ready(function(){
 			var vidWidth = $('#main-container').width();
-			$('.flowplayer').css('width',Math.min(vidWidth,{{ video.width }}))
+			$('.flowplayer').css('width',Math.min(vidWidth,{{ video.width }}));
 		})
 	</script>
 	<script src="http://releases.flowplayer.org/5.3.2/flowplayer.min.js"></script>
