--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
@@ -22,12 +22,15 @@
 </div>
 <hr />
 
+<a class="btn" id="smaller">-<a>
+<a class="btn" id="larger">+<a>
+
 {% if previous %}
-<a class="btn" title="{{ previous.name }}" href="{{ path('yannick_mahe_self_hosted_videos_video', {'video_id': previous.id}) }}"><<</a>
+  <a class="btn" title="{{ previous.name }}" href="{{ path('yannick_mahe_self_hosted_videos_video', {'video_id': previous.id}) }}"><<</a>
 {% endif %}
 
 {% if next %}
-<a class="btn" title="{{ next.name }}" href="{{ path('yannick_mahe_self_hosted_videos_video', {'video_id': next.id}) }}">>></a>
+  <a class="btn" title="{{ next.name }}" href="{{ path('yannick_mahe_self_hosted_videos_video', {'video_id': next.id}) }}">>></a>
 {% endif %}
 
 <a class="btn" onclick="$('body').toggleClass('dark');">Toggle cinema mode</a>
@@ -63,6 +66,24 @@
 		$(document).ready(function(){
 			var vidWidth = $('#main-container').width();
 			$('.flowplayer').css('width',Math.min(vidWidth,{{ video.width }}));
+      $('#smaller').click(function(){
+        var width = $('.flowplayer').width();
+        console.log(width);
+        if(width > 100){
+          width-=10;
+          console.log(width);
+          $('.flowplayer').width(width);
+        }
+        return false;
+      });
+      $('#larger').click(function(){
+        var width = $('.flowplayer').width();
+        if(width < 1000){
+          width+=10;
+          $('.flowplayer').width(width);
+        }
+        return false;
+      })
 		})
 	</script>
 	<script src="http://releases.flowplayer.org/5.3.2/flowplayer.min.js"></script>
