--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
@@ -22,8 +22,8 @@
 </div>
 <hr />
 
-<a class="btn" id="smaller">-<a>
-<a class="btn" id="larger">+<a>
+<a class="btn" id="smaller">-</a>
+<a class="btn" id="larger">+</a>
 
 {% if previous %}
   <a class="btn" title="{{ previous.name }}" href="{{ path('yannick_mahe_self_hosted_videos_video', {'video_id': previous.id}) }}"><<</a>
