--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/list.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/list.html.twig
@@ -24,11 +24,9 @@
 </div>
 
 {% if videos|length > 0 %}
-	<ul class="thumbnails">
-		{% for video in videos %}
-			<li class="span4">{% include "YannickMaheSelfHostedVideosBundle:Default:thumbnail.html.twig" with {'video': video} %}</li>
-		{% endfor %}
-	</ul>
+	{% for video in videos %}
+		<div class="col-md-4">{% include "YannickMaheSelfHostedVideosBundle:Default:thumbnail.html.twig" with {'video': video} %}</div>
+	{% endfor %}
 {% else %}
 	{% if terms == '' %}
 		<h2>No video has yet been uploaded! Go ahead and <a href="{{ path('yannick_mahe_self_hosted_videos_upload_page') }}">upload one</a>.</h2>
