--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-inverse" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -27,4 +28,5 @@
     </form>
 	{% endif %}
   </div><!-- /.navbar-collapse -->
+  </div>
 </nav>
