--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/video.html.twig
@@ -79,7 +79,7 @@
     </form> 
   </div>
   <div class="modal-footer">
-    <a href="#" onclick="$('#modal-delete form').submit();" class="btn btn-danger"><span class="fui-cross-24"></span> Yes, delete this video</a>
+    <a href="#" onclick="$('#modal-delete form').submit();" class="btn btn-danger"><i class="fa fa-times-circle"></i> Yes, delete this video</a>
   </div>
   </div>
   </div>
