--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -7,7 +7,7 @@
     	{{ error|trans({}, 'FOSUserBundle') }}
     </div>
 {% endif %}
-<div class="login-form col-md-4">
+<div style="margin-top: 30px;" class="login-form col-md-4">
 <form action="{{ path("fos_user_security_check") }}" method="post">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
